changed terminal from kitty to alacritty

--- a/.zsh/starship.toml
+++ b/.zsh/starship.toml
@@ -60,4 +60,4 @@ command = 'uptime -p'
 when = ''' test "$HOME" = "$PWD" '''
 format = '''[$output]($style)
 '''
-style = "italic purple"
+style = "italic bold purple"
